# Opengrid_env

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  _fix_notebook.py  app.py  blog.md  entrypoint.sh  generate_plots.py  get_scores.py  inference.py  openenv.yaml  pyproject.toml  requirements-training-unsloth.txt  requirements-training.txt  requirements.txt  run_training.py  run_training_unsloth.py  validate-submission.sh
docs/: changes.md
scripts/: generate_code_md.py  get_scores.py  verify_training.py
server/: app.py
src/: baseline.py  environment.py  grader.py  models.py  oversight.py  physics.py  safety.py  scenarios.py  tasks.py  visualization.py
static/: app.js  index.html  style.css
tests/: test_multi_agent.py  test_solver.py
training/: __init__.py  opengrid_grpo_colab.ipynb  opengrid_grpo_colab_unsloth.ipynb  train_grpo.py
training/outputs/: summary.json
